fix(post): overflow scroll

--- a/public/static/style.css
+++ b/public/static/style.css
@@ -84,7 +84,7 @@ ul > li::marker {
 
 pre {
     margin: 0;
-    overflow: visible;
+    overflow: scroll;
 }
 
 pre > code {
